--- a/styles/style.css
+++ b/styles/style.css
@@ -74,11 +74,11 @@ hr {
     color: #1DD100;
 }
 .seat-numbers {
-    font-size: 1.25rem;
+    font-size: 1rem;
     border-radius: 10px;
     background-color: #F7F8F8;
     padding: 5px;
-    width: 80px;
+    width: 50px;
 }
 .seat-numbers:hover {
     cursor: pointer;
@@ -87,8 +87,22 @@ hr {
     display: flex;
     justify-items: center;
     align-items: center;
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 .divider {
     border-right: 2px dashed rgba(3, 7, 18, 0.30);
+}
+
+.seat-pricing-section {
+    background-color: #F7F8F8;
+}
+.apply-btn {
+    background-color: #1DD100;
+}
+.seats-count-bg {
+    background-color: #1DD100;
+    padding: 2px 10px;
+}
+.info-submit-btn {
+    background-color: #1DD100;
 }
