--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
 /* Font Added */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+html {
+  scroll-behavior: smooth;
+}
 
 * {
     font-family: 'Raleway';
