footer design complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,3 +109,9 @@ hr {
 .info-submit-btn {
     background-color: #1DD100;
 }
+.footer-part {
+    background-color: #030712;
+}
+.footer-hr {
+    background-color: white;
+}
